news not showing bug fix

--- a/src/pages/what-we-do.scss
+++ b/src/pages/what-we-do.scss
@@ -120,6 +120,11 @@
   }
 }
 @media only screen and (max-width: 880px) {
+  .responsive-column {
+    .progress-stat-wrappr {
+      grid-template-columns: 1fr;
+    }
+  }
   .wwd-section {
     grid-template-columns: 1fr;
     .wwd-image {
